plugins {
    id 'java'
    id 'idea'
    id 'net.serenity-bdd.serenity-gradle-plugin' version '5.3.9'
}

group = 'com.company.saucedemo'
version = '1.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'

repositories {
    mavenCentral()
    mavenLocal()
    gradlePluginPortal()
}

ext {
    serenityVersion = '5.3.9'
    cucumberVersion = '7.15.0'
    healeniumVersion = '3.5.8'
    webdrivermanagerVersion = '5.9.2'
    junitVersion = '4.13.2'
}

dependencies {
    // ========= MAIN =========
    implementation "net.serenity-bdd:serenity-core:${serenityVersion}"
    implementation "net.serenity-bdd:serenity-screenplay:${serenityVersion}"
    implementation "net.serenity-bdd:serenity-screenplay-webdriver:${serenityVersion}"
    implementation "net.serenity-bdd:serenity-ensure:${serenityVersion}"

    implementation "com.epam.healenium:healenium-web:${healeniumVersion}"
    implementation "io.github.bonigarcia:webdrivermanager:${webdrivermanagerVersion}"

    // ========= TEST =========
    testImplementation "net.serenity-bdd:serenity-junit:${serenityVersion}"
    testImplementation "net.serenity-bdd:serenity-cucumber:${serenityVersion}"
    testImplementation "io.cucumber:cucumber-java:${cucumberVersion}"
    testImplementation "junit:junit:${junitVersion}"
}

serenity {
    testRoot = "runners"
    requirementsBaseDir = "src/test/resources/features"
    reports = ["single-page-html"]
}

test {
    useJUnit()

    systemProperties System.properties
    systemProperty "cucumber.filter.tags",
            System.getProperty("cucumber.filter.tags", "")

    jvmArgs += [
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
            '--add-opens', 'java.base/java.io=ALL-UNNAMED'
    ]

    testLogging {
        showStandardStreams = true
        events 'passed', 'skipped', 'failed'
        exceptionFormat = 'full'
    }

    outputs.upToDateWhen { false }
    finalizedBy aggregate
}

gradle.startParameter.continueOnFailure = true